Changes in notebook file

--- a/Hypothesis Test Example 1/Hypothesis Test 1.ipynb
+++ b/Hypothesis Test Example 1/Hypothesis Test 1.ipynb
@@ -159,7 +159,7 @@
     }
    ],
    "source": [
-    "print(f'z-statistic:{ttest} \\npvalue :{pval}')"
+    "print(f'z-statistic:{ztest} \\npvalue :{pval}')"
    ]
   },
   {
